Corrects issues with drawer collapse indicator on systems without scrollbars.

--- a/scss/_drawer.scss
+++ b/scss/_drawer.scss
@@ -3,7 +3,7 @@
 
 @if not($enable-framework) {
   /*!
-   * StrapLess Drawer v2.0 (http://github.com/strapless/drawer)
+   * StrapLess Drawer v2.0.1 (http://github.com/strapless/drawer)
    * Licensed under MIT (https://github.com/strapless/drawer/blob/master/LICENSE)
    */
 }
@@ -144,6 +144,7 @@ html.on {
 
 // Drawer Groups & Items
 .drawer-group {
+  max-width: $drawer-width;
   // Separator between groups
   margin: .25rem 0 0 0;
   padding: 0; // Any padding causes bounce on collapse
@@ -174,14 +175,23 @@ html.on {
     text-overflow: ellipsis;
     flex: 1 0 100%;
   }
-  [data-toggle="collapse-group"] > .drawer-item-heading {
-    position: relative;
-    &::before {
-      display: block;
-      width: $drawer-indicator-size;
-      height: $drawer-indicator-size;
-      content: " ";
-      background: inline-svg($drawer-chevron) center center / $drawer-indicator-size $drawer-indicator-size no-repeat;
+  [data-toggle="collapse-group"] {
+    cursor: pointer;
+    > .drawer-item-heading {
+      position: relative;
+      &::before {
+        display: block;
+        width: $drawer-indicator-size;
+        height: $drawer-indicator-size;
+        content: " ";
+        transform-origin: center center;
+        transition-duration: 0.35s;
+        position: absolute;
+        right: 1rem;
+        top: 50%; // Needed for Safari 10, IE10/11
+        margin-top: -4px; // Needed for Safari 10, IE10/11
+        background: inline-svg($drawer-chevron) center center / $drawer-indicator-size $drawer-indicator-size no-repeat;
+      }
     }
   }
 }
